--- a/styles/bothSidebars.css
+++ b/styles/bothSidebars.css
@@ -14,6 +14,7 @@
  */
 
 
+/*
 #main {
 	position: relative;
 	float: left;
@@ -23,7 +24,9 @@
 	display: inline;
 	overflow: auto;
 }
+*/
 
 #body {
 	width: 100%;
 }
+
