--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -12,10 +12,12 @@
  * Sidebar
  */
 
+/*
 #developedBy {
 	text-transform: uppercase;
 	font-size: 0.95em;
 }
+*/
 
 #sidebar div.block {
 	font-size: 1em;
